# kase

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPORT_CASE_EXAMPLE.md  LICENSE  README.md  hack.sh  main.py  pyproject.toml
.changes/: v0.1.0.md  v0.2.0.md
.changes/unreleased/: Added-20260111-134725.yaml  Added-20260118-132134.yaml
samples/: import.csv  playground.sh
samples/case_repo/10001/: case.json
samples/case_repo/10002/: case.json
samples/case_repo/10003/: case.json
samples/case_repo/10004/: case.json
samples/case_repo/10005/: case.json
snap/: snapcraft.yaml
src/kase/: cases.py  cli.py  importer.py  init_tui.py  salesforce.py  tui.py  types.py
src/kase/tui/: case_selector.py  importer.py  init.py  query.py
src/kase/tui/widgets/: case_selector.py
tests/: README.md  __init__.py  conftest.py  test_salesforce.py
tests/integration/: test_case_selector.py  test_importer_app.py  test_init_app.py  test_query_app.py  test_tui_property.py  test_tui_stateful.py
tests/integration/__snapshots__/: test_init_app.ambr  test_query_app.ambr
tests/integration/__snapshots__/test_importer_app/: TestImporterApp.test_importer_app_compose_snapshot.raw
tests/integration/__snapshots__/test_init_app/: TestInitApp.test_init_app_compose.raw
tests/integration/__snapshots__/test_query_app/: TestQueryApp.test_query_app_compose.raw  TestQueryApp.test_query_app_compose_snapshot.raw
tests/integration/widgets/: test_case_selector.py
tests/integration/widgets/__snapshots__/test_case_selector/: TestCaseSelector.test_case_selector_snapshot.raw
tests/unit/: test_cases.py  test_cli.py  test_importer.py
