[project]
name = "kase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.2",
    "rapidfuzz>=3.9.7",
    "textual>=0.73.0",
    "typer>=0.19.2",
]

constraint-dependencies = ["propcache>=0.4.1"]

[project.scripts]
kase = "kase.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = ["textual-dev>=1.6.1"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
